# ai-devops

./: .gitattributes  .gitignore  COURSE_OVERVIEW.md  QUICK_START.md  README.md  README_REPO.md  SETUP_INSTRUCTIONS.md  SHARING.md  requirements.txt  setup_venv.sh
part-01-demystifying-ai/: README.md
part-01-demystifying-ai/resources/: 03_llm_api_call.py  03_llm_approach.md
part-02-ai-tools-landscape/: README.md
part-02-ai-tools-landscape/labs/: README.md
part-03-security-devsecops/: README.md  slides.md
part-03-security-devsecops/resources/: DEMO_SUMMARY.md  README.md  bd-report.txt  blackduck_ai_assistant.py  wifi_hal.c
part-04-github-ai-practice/: README.md  slides.md
part-04-github-ai-practice/resources/: README.md  SLACKBOT_INTEGRATION.md  build-dependency.sh  copilot-prompt-examples.md  github-actions-ci-cpp.yml  pr-summary-template.md  slackbot_demo.md
part-05-metrics-insights/: README.md  structure_sql.md
part-05-metrics-insights/resources/: README.md  component_health_prompt.txt  cost_tracking.py  generate_weekly_summary.py  github_data.json  jira_data.json  pull_github_data.py  pull_jira_data.py  sanity_check.py  weekly_summary_prompt.txt
part-06-reflection-planning/: README.md
resources/lab-1-solutions/: 01_grep.sh  02_python_analysis.py  03_llm_api_call.py  04_hybrid_approach.md  04_hybrid_approach.py  README.md
resources/slackbot/: README.md  build_test.http  pyproject.toml
resources/slackbot/src/slackbot/: __init__.py  app.py  build_analysis.py  config.py  github.py  llm.py  routes.py  slack_client.py
(+5 files in other folders)
