[project]
name = "slackbot"
version = "0.1.0"
description = "Flask Slackbot that summarizes GitHub PRs with an LLM and posts to Slack"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "flask>=3.0",
  "slack-sdk>=3.33",
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "openai>=1.51",
  "python-dotenv>=1.0",
  "certifi>=2024.0",
]

[project.optional-dependencies]
server = ["gunicorn>=23.0"]

[project.scripts]
slackbot = "slackbot.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/slackbot"]

[tool.hatch.build]
include = [
  "src/slackbot/**/*.py",
  "README.md",
]
